# nyc-taxi-weather-lakehouse

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
dags/: lakehouse_pipeline.py
dashboard/: app.py  make_geojson.py  requirements.txt
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/macros/: cross_db.sql
dbt/models/: schema.yml  sources.yml
dbt/models/gold/: gold_borough_demand.sql  gold_month_weather.sql  gold_monthly_volume.sql  gold_weather_impact.sql  gold_zone_demand.sql
dbt/models/silver/: silver_trips_weather.sql
dbt/models/staging/: stg_weather.sql  stg_yellow.sql  stg_zones.sql
src/lakehouse/: build_bronze_yellow.py  build_bronze_zones.py  ingest_weather.py  ingest_yellow.py  ingest_zones.py  load_weather_bq.py  spark.py  validate_silver.py
