[project]
name = "lakehouse"
version = "0.1.0"
description = "NYC Taxi & Weather Lakehouse"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = ["boto3 (>=1.43.23,<2.0.0)", "requests (>=2.34.2,<3.0.0)", "python-dotenv (>=1.2.2,<2.0.0)"]

[tool.poetry]
packages = [{ include = "lakehouse", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
